[tool.poetry]
name = "nights-retrieval"
version = "1"
description = "A GraphQL service to store nights data"
authors = ["behlock"]

[tool.poetry.dependencies]
python = "^3.10.0"
graphene = "^3.2.2"
typer = "^0.9.0"
flask = "^2.3.2"
logging = "^0.4.9.6"
graphql-utilities = "^0.4.0"
uvicorn = "^0.23.1"
starlette = "0.27.0"
structlog = "^23.1.0"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
mysql-connector-python = "^8.1.0"

[tool.poetry.dev-dependencies]
black = {version = ">=21",allow-prereleases = true}
flake8 = "^3.7"
mypy = "<1"
pep8-naming = "^0.8.2"
poetry = "<2"
pytest = "^7.1.3"
typed-ast = "^1.5.3"
typer = "^0.9.0"
types-requests = "^2.25.6"
vulture = "^2.3"

[tool.black]
line-length = 99
target-version = ["py310"]
extend-exclude = ".venv/*"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
